--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">MVP Example</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Card View</string>
     <string name="action_settings">Settings</string>
-    <string name="user_name">username</string>
-    <string name="password">password</string>
-    <string name="log_in">Log in</string>
-    <string name="title_activity_main">MVP Example</string>
-    <string name="username_error">Username cannot be empty</string>
-    <string name="password_error">Password cannot be empty</string>
-
+    <string name="action_add_favourite">Add to Favourites</string>
+    <string name="action_play_next">Play Next</string>
+    <string name="backdrop_title">LOVE MUSIC</string>
+    <string name="backdrop_subtitle">This season top 20 albums</string>
+    <string name="username_error">username is empty</string>
+    <string name="password_error">password is empty</string>
 </resources>
